--- a/index.html
+++ b/index.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Cute Page</title>
+    <style>
+        body {
+            font-family: 'Comic Sans MS', sans-serif;
+            background-color: #ffebcd;
+            color: #ff69b4;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #ff1493;
+            color: white;
+            padding: 20px;
+        }
+        main {
+            margin: 20px;
+        }
+        button {
+            background-color: #ff69b4;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            cursor: pointer;
+            border-radius: 10px;
+        }
+        button:hover {
+            background-color: #ff1493;
+        }
+    </style>
 </head>
 <body>
-    <h1>HTML TEST DEPLOYMENT</h1>
+    <header>
+        <h1>Welcome to My Cute Page!</h1>
+    </header>
+    <main>
+        <p>Here's a little something to brighten your day.</p>
+        <button onclick="alert('Have a great day! 😊')">Click Me!</button>
+    </main>
 </body>
 </html>
